Fix "Note Title" bug on mobile

--- a/public/assets/css/styles.css
+++ b/public/assets/css/styles.css
@@ -29,7 +29,7 @@ html, body {
 }
 
 .note-title {
-  height: 3.5rem;
+  height: auto;
   margin-top: 13px;
   font-size: 3rem;
 }
